--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "build": "NODE_ENV=production webpack --mode production",
     "start": "webpack-dev-server --open --mode development",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "gh-pages": "^3.1.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "postcss-loader": "^3.0.0",
