--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "NODE_ENV=production webpack --mode production",
     "start": "webpack-dev-server --open --mode development",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "gh-clean": "gh-pages-clean"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
